@@ -4,10 +4,7 @@ import dev.prjbtrad001.app.bot.BotParameters;
 import dev.prjbtrad001.app.bot.PurchaseStrategy;
 import dev.prjbtrad001.app.bot.SimpleTradeBot;
 import dev.prjbtrad001.app.bot.Status;
-import dev.prjbtrad001.app.core.MarketAnalyzer;
-import dev.prjbtrad001.app.core.MarketConditions;
-import dev.prjbtrad001.app.core.TradingConstants;
-import dev.prjbtrad001.app.core.TradingSignals;
+import dev.prjbtrad001.app.core.*;
 import dev.prjbtrad001.app.dto.KlineDto;
 import dev.prjbtrad001.app.dto.TradeOrderDto;
 import dev.prjbtrad001.domain.core.TradingExecutor;
@@ -56,13 +53,13 @@ public class TradingService {
     boolean isDownTrend = isDownTrendMarket(conditions, botTypeName);
 
     if (!status.isLong()) {
-      evaluateBuySignal(bot, conditions, isDownTrend);
+      evaluateBuySignal(bot, conditions, klines);
     } else {
-      evaluateSellSignal(bot, conditions, isDownTrend);
+      evaluateSellSignal(bot, conditions, klines);
     }
   }
 
-  private void evaluateBuySignal(SimpleTradeBot bot, MarketConditions conditions, boolean isDownTrend) {
+  private void evaluateBuySignal(SimpleTradeBot bot, MarketConditions conditions, List<KlineDto> klines) {
     BotParameters parameters = bot.getParameters();
     String botTypeName = "[" + parameters.getBotType() + "] - ";
 
@@ -103,6 +100,39 @@ public class TradingService {
     // 🔹 Volatility condition
     boolean lowVolatility = conditions.volatility().compareTo(BigDecimal.valueOf(3)) < 0;
 
+    boolean isPatternsAlignedForBuy = isPatternsAligned(klines, conditions, true);
+    boolean bullishRejection = isBullishPriceRejection(klines.getLast(), conditions.averageVolume(), conditions.atr());
+
+    log(botTypeName + "RSI Oversold: " + (rsiOversold ? "🟢" : "🔴") +
+      " (RSI=" + conditions.rsi().setScale(3, RoundingMode.HALF_UP) + ", Threshold=" + parameters.getRsiPurchase().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Bullish Trend: " + (bullishTrend ? "🟢" : "🔴") +
+      " (EMA8=" + conditions.ema8().setScale(3, RoundingMode.HALF_UP) + ", EMA21=" + conditions.ema21().setScale(3, RoundingMode.HALF_UP) +
+      " | SMA9=" + conditions.sma9().setScale(3, RoundingMode.HALF_UP) + ", SMA21=" + conditions.sma21().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Strong Volume: " + (strongVolume ? "🟢" : "🔴") +
+      " (Current=" + conditions.currentVolume().setScale(3, RoundingMode.HALF_UP) + ", Avg*Mult=" +
+      conditions.averageVolume().multiply(parameters.getVolumeMultiplier()) + ")", true);
+    log(botTypeName + "Touched Support: " + (touchedSupport ? "🟢" : "🔴") +
+      " (Price=" + conditions.currentPrice().setScale(3, RoundingMode.HALF_UP) + ", Support=" + conditions.support().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "MACD Positive: " + (macdPositive ? "🟢" : "🔴") +
+      " (MACD=" + conditions.macd().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Stochastic Bull: " + (stochasticBull ? "🟢" : "🔴") +
+      " (K=" + conditions.stochasticK().setScale(3, RoundingMode.HALF_UP) + ", D=" + conditions.stochasticD().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Low Volatility: " + (lowVolatility ? "🟢" : "🔴") +
+      " (Volatility=" + conditions.volatility().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Patterns Aligned: " + (isPatternsAlignedForBuy ? "🟢" : "🔴") +
+      " (Aligned with bullish setup = true)", true);
+    log(botTypeName + "Positive Momentum: " + (positiveMomentum ? "🟢" : "🔴") +
+      " (Momentum=" + conditions.momentum().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Touched BollingerLower: " + (touchedBollingerLower ? "🟢" : "🔴") +
+      " (Price=" + conditions.currentPrice().setScale(3, RoundingMode.HALF_UP) + ", Lower=" + conditions.bollingerLower().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Bullish Price Rejection:" + (bullishRejection ? "🟢" : "🔴"), true);
+
+    MarketType marketType = MarketType.classifyMarket(conditions);
+
+    // Log do tipo de mercado
+    log(botTypeName + "📊 Current market type: " + marketType, true);
+
+    // Construir o objeto Bullish incluindo o tipo de mercado
     TradingSignals.Bullish tradingSignals =
       TradingSignals.Bullish.builder()
         .rsiCondition(rsiOversold)
@@ -113,19 +143,29 @@ public class TradingService {
         .stochCondition(stochasticBull)
         .momentumCondition(positiveMomentum)
         .volatilityCondition(lowVolatility)
+        .patternsCondition(isPatternsAlignedForBuy)
+        .bullishRejection(bullishRejection)
+        .marketType(marketType)
         .build();
 
-    // 🔹 TODO Incluir 'Reason' no log
+    // Incluir razão da compra
+    String buyReason = "";
     if (tradingSignals.shouldBuy()) {
-      log(botTypeName + "🔵 BUY signal in " + (isDownTrend ? "Down" : "Normal") + " trend detected!");
+      if (bullishRejection) buyReason = "Bullish price rejection";
+      else if (touchedSupport || touchedBollingerLower) buyReason = "Price touched support";
+      else if (rsiOversold) buyReason = "RSI oversold";
+      else if (bullishTrend) buyReason = "Bullish trend confirmed";
+      else if (positiveMomentum) buyReason = "Positive momentum";
+      else buyReason = "Combination of buy signals";
+
+      log(botTypeName + "🔵 BUY signal detected! Reason: " + buyReason);
       executeBuyOrder(bot, calculateOptimalBuyAmount(bot, conditions));
     } else {
-      log(botTypeName + "⚪ Insufficient conditions for purchase.");
+      log(botTypeName + "⚪ Insufficient conditions for BUY.");
     }
-
   }
 
-  private void evaluateSellSignal(SimpleTradeBot bot, MarketConditions conditions, boolean isDownTrend) {
+  private void evaluateSellSignal(SimpleTradeBot bot, MarketConditions conditions, List<KlineDto> klines) {
     BotParameters parameters = bot.getParameters();
     Status status = bot.getStatus();
     String botTypeName = "[" + parameters.getBotType() + "] - ";
@@ -171,31 +211,78 @@ public class TradingService {
     // 🔹 Take Profit / Stop Loss conditions
     boolean reachedTakeProfit = priceChangePercent.compareTo(parameters.getTakeProfitPercent()) >= 0;
     boolean reachedStopLoss = priceChangePercent.compareTo(parameters.getStopLossPercent().negate()) <= 0;
-    boolean minimumProfit = priceChangePercent.compareTo(MIN_PROFIT_THRESHOLD) >= 0;
+    boolean isPatternsAlignedForSell = isPatternsAligned(klines, conditions, false);
+    boolean bearishRejection = isBearishPriceRejection(klines.getLast(), conditions.averageVolume(), conditions.atr());
+
+    log(botTypeName + "RSI Overbought: " + (rsiOverbought ? "🟢" : "🔴") +
+      " (RSI=" + conditions.rsi().setScale(3, RoundingMode.HALF_UP) + ", Threshold=" + parameters.getRsiSale().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Bearish Trend: " + (bearishTrend ? "🟢" : "🔴") +
+      " (EMA8=" + conditions.ema8().setScale(3, RoundingMode.HALF_UP) + ", EMA21=" + conditions.ema21().setScale(3, RoundingMode.HALF_UP) +
+      " | SMA9=" + conditions.sma9().setScale(3, RoundingMode.HALF_UP) + ", SMA21=" + conditions.sma21().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Touched Resistance: " + (touchedResistance ? "🟢" : "🔴") +
+      " (Price=" + conditions.currentPrice().setScale(3, RoundingMode.HALF_UP) + ", Resistance=" + conditions.resistance().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "MACD Negative: " + (macdNegative ? "🟢" : "🔴") +
+      " (MACD=" + conditions.macd().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Negative Momentum: " + (negativeMomentum ? "🟢" : "🔴") +
+      " (Momentum=" + conditions.momentum().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "High Volatility: " + (highVolatility ? "🟢" : "🔴") +
+      " (ATR=" + conditions.atr().setScale(3, RoundingMode.HALF_UP) + ", Volatility=" + conditions.volatility().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Reached Take Profit: " + (reachedTakeProfit ? "🟢" : "🔴") +
+      " (PriceChange%=" + priceChangePercent + ", TP=" + parameters.getTakeProfitPercent().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Reached Stop Loss : " + (reachedStopLoss ? "🟢" : "🔴") +
+      " (PriceChange%=" + priceChangePercent + ", SL=" + parameters.getStopLossPercent().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Patterns Aligned: " + (isPatternsAlignedForSell ? "🟢" : "🔴") +
+      " (Aligned with bearish setup = false)", true);
+    log(botTypeName + "Stochastic Overbought: " + (stochasticOverbought ? "🟢" : "🔴") +
+      " (K=" + conditions.stochasticK().setScale(3, RoundingMode.HALF_UP) + ", D=" + conditions.stochasticD().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Touched BollingerUpper: " + (touchedBollingerUpper ? "🟢" : "🔴") +
+      " (Price=" + conditions.currentPrice().setScale(3, RoundingMode.HALF_UP) + ", Upper=" + conditions.bollingerUpper().setScale(3, RoundingMode.HALF_UP) + ")", true);
+    log(botTypeName + "Bearish Price Rejection: " + (bearishRejection ? "🟢" : "🔴"), true);
+
+    MarketType marketType = MarketType.classifyMarket(conditions);
+
+    // Log do tipo de mercado
+    log(botTypeName + "📊 Current market type: " + marketType, true);
 
     TradingSignals.Bearish tradingSignals =
       TradingSignals.Bearish.builder()
         .rsiCondition(rsiOverbought)
         .trendCondition(bearishTrend)
+        .volumeCondition(highVolatility)
         .priceCondition(touchedResistance || touchedBollingerUpper)
         .macdCondition(macdNegative)
         .stochCondition(stochasticOverbought)
         .momentumCondition(negativeMomentum)
-        .volumeCondition(highVolatility)
+        .volatilityCondition(highVolatility)
         .stopLoss(reachedStopLoss)
         .takeProfit(reachedTakeProfit)
-        .minimumProfitReached(minimumProfit)
+        .patternsCondition(isPatternsAlignedForSell)
+        .bearishRejection(bearishRejection)
+        .marketType(marketType)
         .build();
 
-    //TODO Incluir 'Reason' no log
-    if (tradingSignals.shouldSell()) {
-      log(botTypeName + "🔴 SELL signal detected!");
-      executeSellOrder(bot);
-      return;
-    } else {
-      log(botTypeName + "⚪ No SELL signal in " + (isDownTrend ? "Down" : "Normal") + " trend, maintaining current position.", true);
-    }
 
+    String sellReason = "";
+    if (tradingSignals.shouldSell()) {
+      if (reachedTakeProfit) {
+        sellReason = "Take Profit reached";
+      } else if (reachedStopLoss) {
+        sellReason = "Stop Loss reached";
+      } else {
+        // Determine the main reason for selling
+        if (bearishRejection) sellReason = "Bearish price rejection";
+        else if (touchedResistance || touchedBollingerUpper) sellReason = "Price touched resistance";
+        else if (rsiOverbought) sellReason = "RSI overbought";
+        else if (bearishTrend) sellReason = "Downtrend confirmed";
+        else if (negativeMomentum) sellReason = "Negative momentum";
+        else sellReason = "Combination of sell signals";
+      }
+
+      log(botTypeName + "🔴 SELL signal detected! Reason: " + sellReason);
+      executeSellOrder(bot);
+    } else {
+      log(botTypeName + "⚪ No SELL signal, maintaining current position.", true);
+    }
   }
 
   private BigDecimal calculateOptimalBuyAmount(SimpleTradeBot bot, MarketConditions conditions) {
@@ -220,8 +307,8 @@ public class TradingService {
     }
 
     BigDecimal priceToSupport = conditions.currentPrice().divide(conditions.support(), 8, RoundingMode.HALF_UP);
-    if (priceToSupport.compareTo(BigDecimal.valueOf(1.01)) <= 0) {  // Até 1% acima do suporte (mais sensível)
-      adjustmentFactor = adjustmentFactor.multiply(BigDecimal.valueOf(1.2));  // +20%
+    if (priceToSupport.compareTo(BigDecimal.valueOf(1.01)) <= 0) {
+      adjustmentFactor = adjustmentFactor.multiply(BigDecimal.valueOf(1.2));
     }
 
     BigDecimal bandWidth = conditions.bollingerUpper().subtract(conditions.bollingerLower());
@@ -229,12 +316,12 @@ public class TradingService {
       .divide(bandWidth, 8, RoundingMode.HALF_UP);
 
     if (pricePosition.compareTo(BigDecimal.valueOf(0.15)) <= 0) {
-      adjustmentFactor = adjustmentFactor.multiply(BigDecimal.valueOf(1.15));  // +15%
+      adjustmentFactor = adjustmentFactor.multiply(BigDecimal.valueOf(1.15));
     }
 
     if (conditions.ema50().compareTo(conditions.ema100()) < 0 &&
       conditions.priceSlope().compareTo(BigDecimal.ZERO) < 0) {
-      adjustmentFactor = adjustmentFactor.multiply(BigDecimal.valueOf(0.5));  // -50%
+      adjustmentFactor = adjustmentFactor.multiply(BigDecimal.valueOf(0.5));
     }
 
     BigDecimal marketBasedAmount = baseAmount.multiply(
@@ -403,27 +490,25 @@ public class TradingService {
 
     BigDecimal activationThreshold = taxCost.add(BigDecimal.valueOf(0.15));
 
+    MarketType marketType = MarketType.classifyMarket(conditions);
+
+    BigDecimal volatilityFactor = switch (marketType) {
+      case HIGH_VOLATILITY -> BigDecimal.valueOf(0.55);
+      case STRONG_UPTREND -> BigDecimal.valueOf(0.85);
+      case WEAK_UPTREND -> BigDecimal.valueOf(0.80);
+      case RANGE_BOUND -> BigDecimal.valueOf(0.70);
+      case WEAK_DOWNTREND -> BigDecimal.valueOf(0.65);
+      case STRONG_DOWNTREND -> BigDecimal.valueOf(0.60);
+      case TREND_REVERSAL -> BigDecimal.valueOf(0.75);
+    };
+
     LocalDateTime purchaseTime = status.getLastPurchaseTime();
     long minutesHeld = purchaseTime != null
       ? java.time.Duration.between(purchaseTime, LocalDateTime.now()).toMinutes()
       : 0;
 
-    BigDecimal timeAdjustment =
-      minutesHeld > 60 ? BigDecimal.valueOf(0.92)
-        : minutesHeld > 30 ? BigDecimal.valueOf(0.95)
-        : minutesHeld > 15 ? BigDecimal.valueOf(0.97)
-        : BigDecimal.valueOf(0.99);
-
-    BigDecimal volatilityFactor;
-    if (conditions.volatility().compareTo(BigDecimal.valueOf(3.0)) > 0) {
-      volatilityFactor = BigDecimal.valueOf(0.65).multiply(timeAdjustment);
-    } else if (conditions.volatility().compareTo(BigDecimal.valueOf(2.0)) > 0) {
-      volatilityFactor = BigDecimal.valueOf(0.70).multiply(timeAdjustment);
-    } else if (conditions.volatility().compareTo(BigDecimal.valueOf(1.0)) > 0) {
-      volatilityFactor = BigDecimal.valueOf(0.75).multiply(timeAdjustment);
-    } else {
-      volatilityFactor = BigDecimal.valueOf(0.80).multiply(timeAdjustment);
-    }
+    BigDecimal timeAdjustment = getTimeAdjustment(minutesHeld);
+    volatilityFactor = volatilityFactor.multiply(timeAdjustment);
 
     boolean positiveTrend = conditions.ema8().compareTo(conditions.ema21()) > 0;
     if (positiveTrend) {
@@ -471,7 +556,51 @@ public class TradingService {
     return false;
   }
 
-  private boolean isPriceRejection(KlineDto lastKline, BigDecimal averageVolume, BigDecimal atr) {
+  private BigDecimal getTimeAdjustment(long minutesHeld) {
+    if (minutesHeld > 240) return BigDecimal.valueOf(0.85);
+    if (minutesHeld > 120) return BigDecimal.valueOf(0.88);
+    if (minutesHeld > 60) return BigDecimal.valueOf(0.92);
+    if (minutesHeld > 30) return BigDecimal.valueOf(0.95);
+    if (minutesHeld > 15) return BigDecimal.valueOf(0.97);
+    return BigDecimal.valueOf(0.99);
+  }
+
+  private boolean isBullishPriceRejection(KlineDto lastKline, BigDecimal averageVolume, BigDecimal atr) {
+    BigDecimal open = new BigDecimal(lastKline.getOpenPrice());
+    BigDecimal close = new BigDecimal(lastKline.getClosePrice());
+    BigDecimal high = new BigDecimal(lastKline.getHighPrice());
+    BigDecimal low = new BigDecimal(lastKline.getLowPrice());
+
+    BigDecimal body = close.subtract(open).abs();
+    BigDecimal lowerShadow = open.min(close).subtract(low);
+    BigDecimal range = high.subtract(low);
+
+    // Verificações básicas
+    boolean isBullish = close.compareTo(open) > 0;
+    boolean hasSignificantVolume = new BigDecimal(lastKline.getVolume())
+      .compareTo(averageVolume.multiply(BigDecimal.valueOf(1.2))) >= 0;
+    boolean hasMinimumBodySize = body.compareTo(atr.multiply(BigDecimal.valueOf(0.2))) >= 0;
+    boolean hasLongLowerShadow = lowerShadow.compareTo(body.multiply(BigDecimal.valueOf(2))) > 0;
+
+
+    boolean bodyToRangeRatio;
+    if (range.compareTo(BigDecimal.ZERO) == 0 || range.compareTo(new BigDecimal("0.000000001")) < 0) {
+      bodyToRangeRatio = false;
+    } else {
+      bodyToRangeRatio = body.divide(range, 8, RoundingMode.HALF_UP)
+        .compareTo(BigDecimal.valueOf(0.3)) <= 0;
+    }
+
+    // Critério principal: vela bullish com sombra inferior longa
+    boolean basicCriteria = isBullish && hasLongLowerShadow && hasSignificantVolume;
+
+    // Para swing trading, queremos rejeições fortes
+    return basicCriteria &&
+      (hasMinimumBodySize || bodyToRangeRatio) &&
+      lowerShadow.compareTo(range.multiply(BigDecimal.valueOf(0.5))) >= 0;
+  }
+
+  private boolean isBearishPriceRejection(KlineDto lastKline, BigDecimal averageVolume, BigDecimal atr) {
     BigDecimal open = new BigDecimal(lastKline.getOpenPrice());
     BigDecimal close = new BigDecimal(lastKline.getClosePrice());
     BigDecimal high = new BigDecimal(lastKline.getHighPrice());
@@ -479,26 +608,30 @@ public class TradingService {
 
     BigDecimal body = close.subtract(open).abs();
     BigDecimal upperShadow = high.subtract(open.max(close));
-    BigDecimal lowerShadow = open.min(close).subtract(low);
+    BigDecimal range = high.subtract(low);
 
-    if (body.compareTo(atr.multiply(BigDecimal.valueOf(0.2))) < 0) {
-      return false;
+    // Verificações básicas
+    boolean isBearish = close.compareTo(open) < 0;
+    boolean hasSignificantVolume = new BigDecimal(lastKline.getVolume())
+      .compareTo(averageVolume.multiply(BigDecimal.valueOf(1.2))) >= 0;
+    boolean hasMinimumBodySize = body.compareTo(atr.multiply(BigDecimal.valueOf(0.2))) >= 0;
+    boolean hasLongUpperShadow = upperShadow.compareTo(body.multiply(BigDecimal.valueOf(2))) > 0;
+
+    boolean bodyToRangeRatio;
+    if (range.compareTo(BigDecimal.ZERO) == 0 || range.compareTo(new BigDecimal("0.000000001")) < 0) {
+      bodyToRangeRatio = false;
+    } else {
+      bodyToRangeRatio = body.divide(range, 8, RoundingMode.HALF_UP)
+        .compareTo(BigDecimal.valueOf(0.3)) <= 0;
     }
 
-    BigDecimal volume = new BigDecimal(lastKline.getVolume());
-    if (volume.compareTo(averageVolume.multiply(BigDecimal.valueOf(1.2))) < 0) {
-      return false;
-    }
+    // Critério principal: vela bearish com sombra superior longa
+    boolean basicCriteria = isBearish && hasLongUpperShadow && hasSignificantVolume;
 
-    boolean bullishRejection =
-      lowerShadow.compareTo(body.multiply(BigDecimal.valueOf(2))) > 0 &&
-        close.compareTo(open) > 0;
-
-    boolean bearishRejection =
-      upperShadow.compareTo(body.multiply(BigDecimal.valueOf(2))) > 0 &&
-        close.compareTo(open) < 0;
-
-    return bullishRejection || bearishRejection;
+    // Para swing trading, queremos rejeições fortes
+    return basicCriteria &&
+      (hasMinimumBodySize || bodyToRangeRatio) &&
+      upperShadow.compareTo(range.multiply(BigDecimal.valueOf(0.5))) >= 0;
   }
 
   private BigDecimal estimatePotentialProfit(MarketConditions c) {
@@ -549,73 +682,96 @@ public class TradingService {
       .multiply(BigDecimal.valueOf(0.7).add(riskReturn.multiply(BigDecimal.valueOf(0.3))));
   }
 
-  private boolean hasRecentReversalPattern(List<KlineDto> klines, MarketConditions conditions) {
+  private boolean isPatternsAligned(List<KlineDto> klines, MarketConditions conditions, boolean bullish) {
     if (klines == null || klines.size() < 3) return false;
 
-    boolean patternDetected = checkPatternFormations(klines, conditions.averageVolume());
+    boolean patternDetected = checkPatternFormations(klines, conditions.averageVolume(), bullish);
+
     BigDecimal bandWidth = conditions.bollingerUpper().subtract(conditions.bollingerLower());
-    BigDecimal bandPosition = conditions.currentPrice().subtract(conditions.bollingerLower())
+    BigDecimal bandPosition = conditions.currentPrice()
+      .subtract(conditions.bollingerLower())
       .divide(bandWidth, 8, RoundingMode.HALF_UP)
       .multiply(BigDecimal.valueOf(100));
 
+    // additional filter: only accept bullish if momentum not strongly negative
     if (patternDetected) {
-      if (conditions.momentum().compareTo(BigDecimal.valueOf(-0.1)) < 0) return false;
-      if (bandPosition.compareTo(BigDecimal.valueOf(0.15)) < 0) return false;
+      if (bullish && conditions.momentum().compareTo(BigDecimal.valueOf(-0.1)) < 0) return false;
+      if (!bullish && conditions.momentum().compareTo(BigDecimal.valueOf(0.1)) > 0) return false;
+
+      // bullish: near lower band, bearish: near upper band
+      if (bullish && bandPosition.compareTo(BigDecimal.valueOf(15)) < 0) return true;
+      if (!bullish && bandPosition.compareTo(BigDecimal.valueOf(85)) > 0) return true;
     }
 
     return patternDetected;
   }
 
-  private boolean checkPatternFormations(List<KlineDto> klines, BigDecimal averageVolume) {
+  private boolean checkPatternFormations(List<KlineDto> klines, BigDecimal averageVolume, boolean bullish) {
     if (klines.size() < 4) return false;
 
-    KlineDto currentCandle = klines.getLast();
-    KlineDto previousCandle = klines.get(klines.size() - 2);
-    KlineDto prePreviousCandle = klines.get(klines.size() - 3);
+    KlineDto current = klines.get(klines.size() - 1);
+    KlineDto previous = klines.get(klines.size() - 2);
+    KlineDto prePrevious = klines.get(klines.size() - 3);
 
-    BigDecimal cOpen = new BigDecimal(currentCandle.getOpenPrice());
-    BigDecimal cClose = new BigDecimal(currentCandle.getClosePrice());
-    BigDecimal cHigh = new BigDecimal(currentCandle.getHighPrice());
-    BigDecimal cLow = new BigDecimal(currentCandle.getLowPrice());
-
-    BigDecimal pOpen = new BigDecimal(previousCandle.getOpenPrice());
-    BigDecimal pClose = new BigDecimal(previousCandle.getClosePrice());
-
-    BigDecimal ppOpen = new BigDecimal(prePreviousCandle.getOpenPrice());
-    BigDecimal ppClose = new BigDecimal(prePreviousCandle.getClosePrice());
-
+    BigDecimal cOpen = new BigDecimal(current.getOpenPrice());
+    BigDecimal cClose = new BigDecimal(current.getClosePrice());
+    BigDecimal cHigh = new BigDecimal(current.getHighPrice());
+    BigDecimal cLow = new BigDecimal(current.getLowPrice());
     BigDecimal cBody = cClose.subtract(cOpen).abs();
-    BigDecimal pBody = pClose.subtract(pOpen).abs();
-    BigDecimal ppBody = ppClose.subtract(ppOpen).abs();
-
     BigDecimal cUpperShadow = cHigh.subtract(cClose.max(cOpen));
     BigDecimal cLowerShadow = cOpen.min(cClose).subtract(cLow);
+
+    BigDecimal pOpen = new BigDecimal(previous.getOpenPrice());
+    BigDecimal pClose = new BigDecimal(previous.getClosePrice());
+    BigDecimal pBody = pClose.subtract(pOpen).abs();
+
+    BigDecimal ppOpen = new BigDecimal(prePrevious.getOpenPrice());
+    BigDecimal ppClose = new BigDecimal(prePrevious.getClosePrice());
+    BigDecimal ppBody = ppClose.subtract(ppOpen).abs();
 
     boolean isBullishCurrent = cClose.compareTo(cOpen) > 0;
     boolean isBullishPrev = pClose.compareTo(pOpen) > 0;
     boolean isBullishPP = ppClose.compareTo(ppOpen) > 0;
 
-    // 🔹 Hammer
-    boolean isHammer =
-      !isBullishPrev && isBullishCurrent &&
+    if (bullish) {
+      // 🔹 Hammer
+      boolean isHammer = !isBullishPrev && isBullishCurrent &&
         cLowerShadow.compareTo(cBody.multiply(BigDecimal.valueOf(2.5))) > 0 &&
         cUpperShadow.compareTo(cBody.multiply(BigDecimal.valueOf(0.3))) < 0;
 
-    // 🔹 Bullish Engulfing (with volume confirmation)
-    boolean isBullishEngulfing =
-      !isBullishPrev && isBullishCurrent &&
+      // 🔹 Bullish Engulfing
+      boolean isEngulfing = !isBullishPrev && isBullishCurrent &&
         cBody.compareTo(pBody.multiply(BigDecimal.valueOf(1.5))) > 0 &&
         cOpen.compareTo(pClose) < 0 && cClose.compareTo(pOpen) > 0 &&
-        new BigDecimal(currentCandle.getVolume()).compareTo(averageVolume) > 0;
+        new BigDecimal(current.getVolume()).compareTo(averageVolume) > 0;
 
-    // 🔹 Morning Star
-    boolean isMorningStar =
-      !isBullishPP && ppBody.compareTo(BigDecimal.ZERO) > 0 &&
+      // 🔹 Morning Star
+      boolean isMorningStar = !isBullishPP && ppBody.compareTo(BigDecimal.ZERO) > 0 &&
         pBody.compareTo(ppBody.multiply(BigDecimal.valueOf(0.5))) < 0 &&
         isBullishCurrent &&
         cClose.compareTo(ppOpen.add(ppBody.multiply(BigDecimal.valueOf(0.5)))) > 0;
 
-    return isHammer || isBullishEngulfing || isMorningStar;
+      return isHammer || isEngulfing || isMorningStar;
+    } else {
+      // 🔹 Shooting Star
+      boolean isShootingStar = isBullishPrev && !isBullishCurrent &&
+        cUpperShadow.compareTo(cBody.multiply(BigDecimal.valueOf(2.5))) > 0 &&
+        cLowerShadow.compareTo(cBody.multiply(BigDecimal.valueOf(0.3))) < 0;
+
+      // 🔹 Bearish Engulfing
+      boolean isBearishEngulfing = isBullishPrev && !isBullishCurrent &&
+        cBody.compareTo(pBody.multiply(BigDecimal.valueOf(1.5))) > 0 &&
+        cOpen.compareTo(pClose) > 0 && cClose.compareTo(pOpen) < 0 &&
+        new BigDecimal(current.getVolume()).compareTo(averageVolume) > 0;
+
+      // 🔹 Evening Star
+      boolean isEveningStar = isBullishPP && ppBody.compareTo(BigDecimal.ZERO) > 0 &&
+        pBody.compareTo(ppBody.multiply(BigDecimal.valueOf(0.5))) < 0 &&
+        !isBullishCurrent &&
+        cClose.compareTo(ppOpen.subtract(ppBody.multiply(BigDecimal.valueOf(0.5)))) < 0;
+
+      return isShootingStar || isBearishEngulfing || isEveningStar;
+    }
   }
 
 
